--- a/day08/src/ex00/Spring/pom.xml
+++ b/day08/src/ex00/Spring/pom.xml
@@ -16,11 +16,18 @@
 
     <dependencies>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.springframework/spring-core &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-core</artifactId>-->
+<!--            <version>6.0.9</version>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>6.0.9</version>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.24</version>
         </dependency>
 
     </dependencies>
