--- a/day08/src/ex02/Service/src/main/resources/db.properties
+++ b/day08/src/ex02/Service/src/main/resources/db.properties
@@ -1,4 +1,5 @@
 db.url=jdbc:postgresql://localhost:5432/database_chat
-dataSource.cachePrepStmts=true
-dataSource.prepStmtCacheSize=250
-dataSource.prepStmtCacheSqlLimit=2048
+#db.user=
+#db.password=
+db.schema=src/main/resources/schema.sql
+db.data=src/main/resources/data.sql
